--- a/packageinfo.jsonc
+++ b/packageinfo.jsonc
@@ -1,55 +1,55 @@
 {
-	"language": "python3",
-	"name": "jk_datamatrix",
-	"version": "0.2020.4.16",
+	"documentation": [],
+	"magic": {
+		"magic": "packageinfo",
+		"version": 2
+	},
 	"meta": {
+		"authors": [
+			{
+				"email": "pubsrc@binary-overflow.de",
+				"name": "J\u00fcrgen Knauth"
+			}
+		],
 		"description": "This python module provides a class that represents a data matrix. This is basically a table you can work with: Modify, sort, filter and print. Everthing is kept in memory, is not indexed, and therefore intended for a limited amount of data only.",
+		"development_status": "alpha",
 		"keywords": [
 			"matrix",
 			"table",
 			"data",
 			"datatable"
 		],
-		"license": "Apache 2.0",
-		"development_status": "alpha",
-		"authors": [
-			{
-				"name": "Jürgen Knauth",
-				"email": "pubsrc@binary-overflow.de"
-			}
-		],
-		"wiki": {
-			"page": "DevDocs:jk_datamatrix"
-		}
+		"language": "python3",
+		"license": "Apache2",
+		"name": "jk_datamatrix",
+		"packageClass": "python-module",
+		"version": "0.2020.4.17"
 	},
 	"repositories": [
 		{
-			"type": "github",
-			"user": "jkpubsrc",
+			"devon_publish": false,
 			"project": "python-module-jk-datamatrix",
-			"devon_publish": false
+			"type": "github",
+			"user": "jkpubsrc"
 		},
 		{
-			"type": "pypi",
+			"devon_publish": false,
 			"project": "jk_datamatrix",
-			"devon_publish": false
+			"type": "pypi"
 		}
 	],
-	"source": {
-		"packages": [
-			"jk_datamatrix"
-		],
-		"extra_data_files": [
-		],
-		"extra_binary_files": [
-		]
-	},
 	"requirements": {
 		"python_packages": [
 			"jk_console"
 		],
-		"python_packages_dev": [
+		"python_packages_dev": [],
+		"system_apt_packages": []
+	},
+	"source": {
+		"extra_binary_files": [],
+		"extra_data_files": [],
+		"packages": [
+			"jk_datamatrix"
 		]
 	}
 }
-
